--- a/app/styles/elements/_window-header.css
+++ b/app/styles/elements/_window-header.css
@@ -18,9 +18,6 @@
     left: 0;
     color: white;
     font-size: $font-size-default;
-    @extend .webkit-drag;
-    -webkit-app-region: drag;
-    cursor: -webkit-grab;
     z-index: 10000;
 }
 
@@ -31,7 +28,7 @@
 
 .window-header-logo,
 .window-header-logo svg {
-    display: inline-block;
+    display: flex;
     width: 30px;
     height: 40px;
 }
@@ -65,6 +62,7 @@
     -webkit-user-select: none !important;
     background: $color-dark;
     box-shadow: 0px 0px 100px 100px $color-dark;
+    will-change: transform;
 
 }
 
@@ -79,13 +77,14 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     z-index: 0;
+    pointer-events: none
 }
 
 .window__title h1 {
@@ -103,7 +102,6 @@
 .window__controls_right button {
     padding: 8px 14px;
     font-size: 12px;
-    background-color: $red
 }
 
 /* CONTROLS */
