--- a/app/styles/elements/_notifier.css
+++ b/app/styles/elements/_notifier.css
@@ -11,7 +11,7 @@
     justify-content: center;
     flex-direction: column;
     width: 100vw;
-    height: 100%;
+    min-height: 30vh;
     padding: 5vh 20px;
     left: 0;
     z-index: 1000;
