--- a/app/styles/elements/_window-header.css
+++ b/app/styles/elements/_window-header.css
@@ -29,6 +29,7 @@
 .window-header-logo,
 .window-header-logo svg {
     display: flex;
+    flex-shrink: 0;
     width: 30px;
     height: 40px;
 }
@@ -76,8 +77,8 @@
 .window__title {
     position: absolute;
     width: 100%;
-    height: 100%;
-    bottom: 0;
+    min-height: 100%;
+    top: 0;
     left: 0;
     display: flex;
     align-items: center;
