fix #9 - remove frameless and transaprent

--- a/app/styles/_variables.css
+++ b/app/styles/_variables.css
@@ -30,6 +30,7 @@ $background-primary:   #F8FAFF;
 $background-jaguar:    #F4F5F9;
 $background-light:     #2E3137;
 $background-dark:      rgba(0,0,0,0.01);
+$background-app:       #959CAE;
 
 /* Typography */
 $color-primary:        #777F8A;
