--- a/app/styles/elements/_notifier.css
+++ b/app/styles/elements/_notifier.css
@@ -5,15 +5,17 @@
 
 */
 .notifier {
-    position: absolute;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100vw;
-    min-height: 30vh;
+    min-height: 100vh;
     padding: 5vh 20px;
     left: 0;
+    top: 0;
+    right: 0;
     z-index: 1000;
 }
 
@@ -75,7 +77,7 @@
 
 /* animation state */
 .notifier {
-    position: absolute;
+    position: fixed;
     top: -100vh;
     transition: all .32s ease-in-out;
     will-change: all;
