--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,7 +55,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 40px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+    background: $background-app;
 }
 
 .app.content-container .Placeholder { flex: 1 }
@@ -68,7 +69,7 @@ body {
     pointer-events: none;
 }
 
-.app.content-container .app-view > * {
+.app.content-container .app-view > *:not(.notifier) {
     display: flex;
     width: 100%;
     pointer-events: all;
