--- a/app/styles/elements/_inputs.css
+++ b/app/styles/elements/_inputs.css
@@ -17,23 +17,24 @@ textarea {
     /* Ensure focus on inputs doesn't allow app dragging */
     -webkit-app-region: no-drag;
     border-radius: 4px;
+    border: 1px solid transparent;
+    box-shadow: $box-shadow-inputs;
+
 }
 
 input {
-    border: 0;
     height: 34px;
     padding: 2px 4px;
     width: auto;
 }
 
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input:focus,
+textarea:focus {
+    border: 1px solid #2188ff;
+    box-shadow: inset 0 1px 2px rgba(27,31,35,0.075), 0 0 0 0.2em rgba(3,102,214,0.3);
 }
-input[type="number"] {
-    -moz-appearance: textfield;
-}
+
+
 
 [contenteditable=true] { max-width: 100% }
 [contenteditable=true] + button { display: none !important }
