--- a/app/styles/components/wallet.css
+++ b/app/styles/components/wallet.css
@@ -3,18 +3,16 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    height: 100vh;
     background: $background-jaguar;
+    height: 100vh;
 }
 
 .wallet-icon {
     width: 80px;
     height: 80px;
     display: flex;
-    right: 10px;
-    top: 10px;
-    justify-content: flex-end;
-    position: absolute;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -35,6 +33,9 @@
     flex-shrink: 0;
     padding-bottom: 20px;
     padding-top: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .wallet-balance,
@@ -55,17 +56,39 @@
     flex-shrink: 0;
     flex-direction: column;
     width: 100%;
-    justify-content: center;
     align-items: center;
 
 }
 
 .wallet-exchange {
+    display: flex;
     text-align: center;
-    width: 100%
+    width: 100%;
+    flex-grow: 1
 }
 
 
 .wallet-trade-buy {
     margin-top: auto
+}
+
+/* context */
+
+.wallet:not(.wallet-ready) .wallet-icon {
+    position: absolute;
+    top: 40vh;
+    right: calc(50% - 40px);
+    transform: scale(2);
+    transition: all .2s ease;
+}
+
+.wallet-trade .loader-svg {
+    position: absolute;
+    top: 50vh;
+
+}
+
+.wallet:not(.wallet-ready) .wallet-wallets-header h2 > *:not(.wallet-icon) {
+    transition: all .2s ease;
+    opacity: 0
 }
