--- a/app/styles/elements/_buttons.css
+++ b/app/styles/elements/_buttons.css
@@ -18,6 +18,7 @@ button {
     cursor: pointer;
     transition: all .2s ease;
     border-radius: 4px;
+    pointer-events: all
 }
 
 
@@ -36,6 +37,18 @@ button.withBorder {
     position: relative;
     text-transform: uppercase;
     box-shadow: $box-shadow-inputs;
+}
+
+
+button.link {
+    border-bottom: 1px solid $blue;
+    border-radius: 0;
+    margin-left: 6px;
+}
+
+button.link:hover {
+    border-bottom-color: transparent;
+    color: $blue
 }
 
 
@@ -68,11 +81,14 @@ button.withBorder {
 }
 
 .action > span {
+    position: relative;
     flex-grow: 1;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+.action.centered span { right: -16px }
 
 .action > i {
     margin-left: 8px;
