--- a/app/styles/elements/_inputs.css
+++ b/app/styles/elements/_inputs.css
@@ -34,6 +34,9 @@ textarea:focus {
     box-shadow: inset 0 1px 2px rgba(27,31,35,0.075), 0 0 0 0.2em rgba(3,102,214,0.3);
 }
 
+.select-container {
+    position: relative;
+}
 
 
 [contenteditable=true] { max-width: 100% }
