--- a/app/styles/components/coinList.css
+++ b/app/styles/components/coinList.css
@@ -43,13 +43,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 .coinList-coin-logo > * {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     box-shadow: $box-shadow-inputs;
     border-radius: 50%;
     transform: rotate(10deg);
