--- a/app/styles/elements/_buttons.css
+++ b/app/styles/elements/_buttons.css
@@ -122,6 +122,8 @@ button.link:hover {
     color: #FFF;
     box-shadow: 0px 10px 20px #B2C8FC
 }
+.action.primary i svg { fill: #FFF }
+
 .action.primary > i { background-color: rgba(0,0,0,0.2) }
 .action.primary > span { font-weight: 600; }
 .action.primary:hover > i { background: $color-dark }
