--- a/app/styles/components/login.css
+++ b/app/styles/components/login.css
@@ -12,7 +12,7 @@
 
 .login .form {
     flex-direction: column;
-    padding: 0px 60px 100px;
+    padding: 0px 20px 100px;
 }
 
 .login-button {
@@ -43,6 +43,7 @@
 
 .Placeholder-logo {
     @extend .flexCenter;
+    overflow: hidden;
 }
 
 .Placeholder-logo,
@@ -54,7 +55,7 @@
 
 .Placeholder-logo svg {
     transform: scale(3);
-    transform-origin: 55% 76%;
+    transform-origin: 55% 85%;
     pointer-events: none
 
 }
@@ -73,5 +74,6 @@
     font-weight: 200;
     font-size: 3.2em;
     color: $color-dark;
+    margin: 0 0 20px 0;
 
 }
