fix #18 ~ add electrum support

--- a/app/styles/components/login.css
+++ b/app/styles/components/login.css
@@ -1,9 +1,10 @@
-
+.login {
+    height: 100vh
+}
 
 .login,
 .login .form {
     display: flex;
-    height: 100%;
     overflow: auto;
     align-items: center;
     justify-content: center;
