--- a/app/styles/components/trade.css
+++ b/app/styles/components/trade.css
@@ -2,6 +2,7 @@
 .trade-body {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 }
 
 .trade-processing {
@@ -23,7 +24,6 @@
 
 .trade-body {
     position: relative;
-    z-index: 10;
     transition: all .2s ease;
     will-change: transform;
 }
@@ -42,6 +42,7 @@
 }
 
 .trade-type-item {
+    height: 70px;
     padding: 10px 8px 2px 8px;
     flex-grow: 1;
     border: 1px solid transparent;
@@ -94,7 +95,8 @@
     width: 60px;
 }
 
-.trade-type-item i svg {
+.trade-type-item i svg,
+.trade-type-item canvas {
     width: 60px;
     height: 30px;
     fill: $color-dark;
@@ -191,7 +193,7 @@
     color: $color-dark;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
 }
 
@@ -209,7 +211,6 @@
     font-weight: 600
 }
 
-.trade-action-wrapper button { box-shadow: none !important }
 
 .trade-action-wrapper button div.validation {
     display: flex;
@@ -240,9 +241,9 @@
     align-items: center;
     justify-content: flex-end;
     height: 40px;
-    padding-right: 10px;
-
 }
+
+
 .trade-amount_input-wrapper .trade-setMax {
     position: relative;
     z-index: 1;
@@ -252,6 +253,7 @@
     border: 1px solid $grey;
     padding: 7px 10px;
     border-radius: 4px;
+    margin-right: 10px;
 }
 
 .trade-amount_input-wrapper .trade-setMax:hover {
@@ -277,6 +279,8 @@
 .trade-amount .label .label-title {
     margin-right: auto;
     font-weight: 400;
+    font-size: 1.1em;
+    opacity: .3
 }
 
 .trade-amount .label .link {
@@ -294,7 +298,12 @@
 
 
 .action.trade-pair { padding: 0 }
-
+.action.trade-pair > strong {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1
+}
 .trade-amount .label.trade-rel {
     padding: 10px 4px 10px 4px
 }
@@ -370,7 +379,7 @@
 }
 
 .trade-amount_input > * {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .trade-button-wrapper {
@@ -390,6 +399,80 @@
     width: 40px;
     height: 40px;
 }
+
+/* deposit */
+
+.trade-deposit {
+    box-shadow: $box-shadow-inputs;
+    border-radius: 4px;
+    padding: 0 10px 10px
+}
+
+.trade-deposit,
+.trade-deposit-body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.trade-deposit,
+.trade-deposit-body,
+.trade-deposit-address {
+    width: 100%;
+}
+
+
+.trade-deposit-address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.trade-deposit-address button {
+    width: 100%;
+    text-align: left;
+    box-shadow: $box-shadow-inputs;
+    color: $color-dark;
+    margin-top: 10px;
+    background: #FFF;
+}
+
+.trade-deposit h2 {
+    font-size: 1.2em;
+    margin: 0
+}
+
+.trade-deposit-amount {
+    display: flex;
+    width: 100%;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+.trade-deposit-amount-left {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding-right: 10px;
+}
+
+.trade-deposit-amount p {
+    margin: 0;
+    text-align: left;
+ }
+
+.trade-deposit-amount p svg {
+    position: relative;
+    top: 6px
+}
+
+.trade-deposit-amount-left-balance {
+    color: $color-dark;
+    opacity: .5
+}
+
 
 
 /* charts */
