--- a/app/styles/elements/_buttons.css
+++ b/app/styles/elements/_buttons.css
@@ -17,6 +17,7 @@ button {
     cursor: pointer;
     transition: all .2s ease;
     border-radius: 4px;
+    will-change: transform;
 }
 
 
@@ -126,6 +127,20 @@ button.link:hover {
 .action.primary > i { background-color: rgba(0,0,0,0.2) }
 .action.primary > span { font-weight: 600; }
 .action.primary:hover > i { background: $color-dark }
+
+
+/* danger */
+
+.action.danger {
+    background: $danger;
+    color: #FFF;
+    box-shadow: 0px 10px 20px rgba(0,0,0,0.1)
+}
+.action.danger i svg { fill: #FFF }
+
+.action.danger > i { background-color: rgba(0,0,0,0.2) }
+.action.danger > span { font-weight: 600; }
+.action.danger:hover > i { background: $color-dark }
 
 /* dark */
 
